src/go-calculator/k8s/manifesto.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: calculator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: calculator
  name: calculadora-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calculadora-api
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: calculadora-api
        tier: backend
    spec:
      containers:
      - env:
        - name: DB_USER
          value: __USUARIO_BANCO__
        - name: DB_PASSWORD
          value: __SENHA_BANCO__
        - name: DB_HOST
          value: "mysql-dev.wandermaia.com"
        - name: DB_NAME
          value: "mydb"
        image: __IMAGEM__
        imagePullPolicy: IfNotPresent
        name: calculadora-api
        ports:
        - containerPort: 7000
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /backend
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /backend
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: calculator
  name: calculadora-api
  labels:
    app.type.monitor: jvm-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 7000
  selector:
    app: calculadora-api
    tier: backend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: calculator
  name: ingress-alb-calculadora-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: calculadora-api
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: calculator
  name: ingress-alb-public-calculadora-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: calculadora-api
              port:
                number: 80
